--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -4,30 +4,30 @@ loaderVersion = "[43,)"
 license = "Insert License Here"
 
 [[mods]]
-modId = "examplemod"
+modId = "mystcraftages"
 version = "${version}"
-displayName = "Example Mod"
-authors = "Me!"
+displayName = "Mystcraft: Ages"
+authors = "naomieow"
 description = '''
-This is an example description! Tell everyone what your mod is about!
+Mystcraft: Ages is a modern rewrite and reimagining of the original "Mystcraft" mod.
 '''
 #logoFile = ""
 
-[[dependencies.examplemod]]
+[[dependencies.mystcraftages]]
 modId = "forge"
 mandatory = true
 versionRange = "[43,)"
 ordering = "NONE"
 side = "BOTH"
 
-[[dependencies.examplemod]]
+[[dependencies.mystcraftages]]
 modId = "minecraft"
 mandatory = true
 versionRange = "[1.19.2,)"
 ordering = "NONE"
 side = "BOTH"
 
-[[dependencies.examplemod]]
+[[dependencies.mystcraftages]]
 modId = "architectury"
 mandatory = true
 versionRange = "[6.2.43,)"
